fix the close button position not to overlap with Flash
Former-commit-id: a352cae41acfab7b3e95febda9a020322bbfc0d5 [formerly 00c9a6ac8f143e539c7a884c98be52b705b1fbe0] [formerly c643d6fa4c4fe75578fe9f59912a2493f4775268 [formerly cb80ecec8a400f64ca404befa7f5bdf232e338ea]]
Former-commit-id: 9e38b79c18067629d27c91013c81a3f223b9b17c [formerly 9ff8f4325253ce4823a49e5a5e24a0973854ebc6]
Former-commit-id: 5b8f1bd5d8c7ac8c067376139dd9326add9ae733

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -132,14 +132,12 @@ a:link,a:visited {
 	color: #FFFFFF;
 	line-height: 25px;
 	position: absolute;
-	right: -12px;
+	right: 5px;
 	text-align: center;
-	top: -10px;
+	top: 5px;
 	width: 24px;
 	text-decoration: none;
 	font-weight: bold;
-	border-radius: 12px;
-	box-shadow: 1px 1px 3px #000;
 }
 
 .close:hover {
